# Equilibrium

./: .gitignore  CMakeLists.txt  README.md  equilibrium.sh
apps/: CMakeLists.txt  diversity_counts.cc  run.cc  simulation_history.cc  trends.cc
cmake/: configure_files.cmake
include/equilibrium/: graph.h  simulation.h  writer.h
processed-data/: collated-result-1722093561.csv
scripts/: data-to-csv.py  slurm-run.py
src/: CMakeLists.txt  graph.cc  simulation.cc  writer.cc
tests/: CMakeLists.txt  test_equilibrium.cc
